# ray-tracer-challenge

./: .gitignore  CMakeLists.txt  README.md  bounding_box.cpp  camera.cpp  camera.h  canvas.h  color.h  cube.cpp  cube.h  group.cpp  group.h  intersection.h  main.cpp  material.h  matrix.cpp  matrix.h  obj_file.h  pattern.cpp  pattern.h  plane.h  ray.h  raytrace1.cpp  raytrace2.cpp  raytrace3.cpp  raytrace4.cpp  raytrace5.cpp  raytrace6.cpp  raytrace7.cpp  shape.cpp  shape.h  sphere.h  timer.h  triangle.cpp  triangle.h  tuple.cpp  tuple.h  world.h
apps/: raytrace1.cpp  raytrace2.cpp  raytrace3.cpp  raytrace4.cpp  raytrace5.cpp  raytrace6.cpp  raytrace7.cpp  raytrace8.cpp  render.cpp
cmake/Modules/: FindFolly.cmake
core/: bounding_box.h  camera.cpp  camera.h  canvas.h  color.h  intersection.h  light.cpp  light.h  material.h  matrix.h  pattern.cpp  pattern.h  ray.h  tuple.cpp  tuple.h  world.h
examples/: sphere.pbrt
importers/: file.cpp  file.h  obj_file.cpp  obj_file.h  pbrt_file.cpp  pbrt_file.h  yaml_file.cpp  yaml_file.h
shapes/: cube.h  group.h  plane.cpp  plane.h  shape.cpp  shape.h  sphere.h  triangle.h
tests/: CMakeLists.txt  bounding_box_test.cpp  camera_test.cpp  canvas_test.cpp  color_test.cpp  cube_test.cpp  group_test.cpp  light_test.cpp  material_test.cpp  matrix_test.cpp  obj_file_test.cpp  pattern_test.cpp  plane_test.cpp  ray_test.cpp  shape_test.cpp  sphere_test.cpp  test_common.cpp  test_common.h  triangle_test.cpp  tuple_test.cpp  world_test.cpp
utils/: timer.h
